[workspace]
members = [".", "entity", "migration"]

[package]
name = "alert-transformer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "alert-transformer"
test = false
doc = false

[lib]
name = "server"
path = "src/server/lib.rs"


[dependencies]
entity = {path = "entity"}
migration = { path = "migration"}
clap = {version = "4.5.20", features = ["derive"]}
axum = { version = "0.7", features = ["tracing", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.41", features = ["full"] }
tower = { version = "0.5", features = ["timeout"] }
tower-http = { version = "0.6", features = ["timeout", "trace"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "1.0"}
anyhow = {version = "1.0"}
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print" ] }
config = "0.14.1"
log = "0.4.22"
